# PagerWesi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  custom-controls.example.yml  policy.example.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: audit-pr.yml  ci.yml  codeql.yml  dependency-review.yml  drift-detection.yml  health-check.yml  integration.yml  k8s-integration.yml  pages.yml  pr-comment.yml  release.yml  trivy-scan.yml
action/: action.yml
alpine/: harden.sh
cloud/: __init__.py  agent.py  aws_harden.py  azure_harden.py  compliance.py  concurrent_runner.py  control_registry.py  core.py  custom_controls.py  dashboard_gen.py  docker_cis.py  exceptions.py  finding_utils.py  gcp_harden.py  html_report.py  input_validator.py  k8s_harden.py  logging_config.py  main.py  network_scanner.py  policy.py  rate_limiter.py  remediation.py  requirements.txt  secrets_scanner.py  terraform_plan.py  webhooks.py
cloud/providers/: __init__.py
cloud/providers/aws/: __init__.py  baseline.py  organizations.py  rollback.py  services.py
cloud/tests/: test_agent.py  test_compliance.py  test_concurrent_runner.py  test_dashboard_gen.py  test_input_validator.py  test_logging_config.py  test_main.py  test_network_scanner.py  test_policy.py  test_rate_limiter.py  test_remediation.py  test_secrets_scanner.py  test_terraform_plan.py  test_webhooks.py
docs/: compliance-mapping.json  controls.md  finding.schema.json  index.html  policy.schema.json  provider-permissions.md  quickstart.md  versions.md
docs/assets/: site.js  styles.css
docs/releases/: v0.10.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
freebsd/: harden.sh
linux/: harden.sh
macos/: harden.sh
scripts/: generate_control_docs.py
tests/: benchmark_s3_audit.py  test_agent.py  test_aws_organizations.py  test_aws_rollback.py  test_aws_services.py  test_cloud_providers.py  test_core.py  test_k8s.py  test_new_features.py  test_policy.py  test_reporting_registry.py  test_s3_audit.py
tests/integration/: test_aws_localstack_s3.py
tests/os/: alpine_harden.bats  freebsd_harden.bats  linux_harden.bats  windows_harden.Tests.ps1
windows/: harden.ps1
