[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-hardening"
version = "0.2.0"
description = "Cross-platform security baseline auditing and controlled remediation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34,<2"]
azure = ["azure-identity>=1.17,<2", "azure-mgmt-resource>=23,<24"]
gcp = ["google-auth>=2.29,<3", "google-cloud-resource-manager>=1.12,<2"]
dev = [
    "mypy>=1.10,<2",
    "pip-audit>=2.7,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=5,<6",
    "ruff>=0.5,<1",
]

[project.scripts]
automation-hardening = "cloud.main:main"

[tool.setuptools.packages.find]
include = ["cloud*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests", "cloud/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
source = ["cloud"]
