[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-hardening"
version = "0.2.1"
description = "Cross-platform security baseline auditing and controlled remediation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34,<2"]
azure = [
    "azure-identity>=1.17,<2",
    "azure-mgmt-monitor>=7,<8",
    "azure-mgmt-network>=28,<31",
    "azure-mgmt-resource>=23,<26",
    "azure-mgmt-security>=7,<8",
    "azure-mgmt-storage>=22,<24",
    "azure-mgmt-subscription>=3,<4",
]
gcp = [
    "google-auth>=2.29,<3",
    "google-cloud-compute>=1.20,<2",
    "google-cloud-logging>=3.10,<4",
    "google-cloud-resource-manager>=1.12,<2",
    "google-cloud-storage>=2.16,<4",
]
dev = [
    "build>=1.2,<2",
    "mypy>=1.10,<3",
    "pip-audit>=2.7,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.5,<1",
]

[project.scripts]
automation-hardening = "cloud.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["cloud*"]
exclude = ["cloud.tests*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests", "cloud/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
source = ["cloud"]

[tool.coverage.report]
fail_under = 80

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*"]
ignore_missing_imports = true
